Fix TestHelloWorldExtension
Signed-off-by: Craig Perkins <cwperx@amazon.com>